--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -131,7 +131,7 @@
                 <div class="userPanel col-sm-4">
                   <div class="row">
                     <div class="col-md-4 col-sm-12 col-xs-4 no-gutter" style="margin: 8px 0;">
-                      <img ng-if="question.anonymous"class="userIcon" src="https://placeimg.com/150/150/nature" />
+                      <img ng-if="question.anonymous"class="userIcon" ng-src="http://flathash.com/{{question.name}}" />
                       <img ng-if="!question.anonymous" class="userIcon" ng-src="{{::question.owner.coverimg}}" />
                     </div>
                     <div class="col-md-8 col-sm-12 col-xs-8 no-gutter" style="margin: 10px 0; text-align: center; font-size:0.9em;">
