--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -136,7 +136,7 @@
                     </div>
                     <div class="col-md-8 col-sm-12 col-xs-8 no-gutter" style="margin: 10px 0; text-align: center; font-size:0.9em;">
                       <a ng-if="question.anonymous">เพื่อนใจ</a>
-                      <a ng-if="!question.anonymous" ng-href="/users/{{::question.ownerId}}">{{::question.owner.username}}</a>
+                      <a ng-if="!question.anonymous" ng-href="/users/{{::question.ownerId}}" style="font-size:0.9em;">{{::question.owner.username}}</a>
                       <br/>
                       <small>{{question.created | timeAgo}}</small><br/>
                     </div>
