--- a/client/app/about/about.html
+++ b/client/app/about/about.html
@@ -3,15 +3,15 @@
 <div class="container animated fadeIn">
 	<h1><img ng-src="/assets/images/icon.gif" style="margin-bottom:75px;">
 <span style="font-size:5em;">เพื่อนใจทําไมกัน?</span></h1>
-		<h2 style="font-size: 4em;">จุดประสงของการสร้างเพื่อนใจ..</h2><br>
+		<h2 style="font-size: 4em;">จุดประสงค์ของการสร้างเพื่อนใจ..</h2><br>
 
-		<h3 style="font-size: 3em;">..นั้นเพื่อเปิดพื่นที่ให้ทุกคนได้สามารถแลกเปลียนและช่วยปัญหาของกันและกันอย่างเปิดใจ<br><br>
+		<h3 style="font-size: 3em;">..เพื่อเปิดพื่นที่ให้ทุกคนได้สามารถแลกเปลี่ยนและช่วยแก้ปัญหาของกันและกันอย่างเปิดใจ<br><br>
 
-		เราต้องการให้ทุกคนบนโลกนี้รู้ว่า<ins style="font-size: 1.2em;">คุณไม่ได้เป็นคนเดียวที่อยู่ในโลกนี้</ins> มีคนมากหมายที่ยินดีที่จะช่วยเสมือนกับว่าเราเป็นเพื่อนร่วมโลกกันอย่างไม่หวังผลตอบแทนใดๆด้วยความรักและหวังดี<br><br>
+		เราต้องการให้ทุกคนบนโลกนี้รู้ว่า<ins style="font-size: 1.2em;">คุณไม่ได้เป็นคนเดียวที่อยู่บนโลกนี้</ins> มีคนมากมายที่ยินดีที่จะช่วยเสมือนกับว่าเราเป็นเพื่อนร่วมโลกที่รักและหวังดีต่อกัน โดยไม่หวังผลตอบแทนใดๆ<br><br>
 
-		ในโลกปัจจุบันที่ทุกอย่างดูยุ่งเหยิงลําบากและสิ้นหวัง ยังมีที่กลุ่มคนอย่างเพื่อนใจที่ยังเป็นทีพักพิงเพื่อให้เพื่อนๆทุกคนได้ลุกขึ้นและเดินหน้าต่อไปในชีวิต<br><br>
+		ในโลกปัจจุบันที่ทุกอย่างดูยุ่งเหยิงลําบากและสิ้นหวัง ยังมีเพื่อนใจที่ยังเป็นทีพักพิงเพื่อให้เพื่อนๆทุกคนได้ลุกขึ้นและเดินหน้าต่อไปในชีวิต<br><br>
 
-		ยินดีต้อนรับทุกท่านเข้ามาเป็นเพื่อนใจเพื่อทําให้สังคมนี้อบอุ่นขึ้น และ เป็นกําลังใจให้ทุกคนทําหน้าที่ของตนอย่างสุดความสามารถเพื่อที่จะทําฝันของทานให้เป็นจริง<br><br>
+		ยินดีต้อนรับทุกท่านเข้ามาเป็นเพื่อนใจเพื่อทําให้สังคมนี้อบอุ่นขึ้น และ เป็นกําลังใจให้ทุกคนทําหน้าที่ของตนอย่างสุดความสามารถเพื่อที่จะคุณฝันของทานให้เป็นจริง<br><br>
 		</h3>
 		<hr><br>
 
