--- a/client/app/about/aboutcreator.html
+++ b/client/app/about/aboutcreator.html
@@ -34,13 +34,13 @@
 			display: block;
   margin: 0 auto;
   font-size: 0.5em;
-		">สวัสดีครับผมชื่อนาย<br><span style="font-size:2em;">ศุภกร เลาหสงคราม</span><br> ตอนนี้ ไม่มีรายได้ ไม่มีงานประจํา ไม่มีหน้าตาอะไรในสังคม มีอย่างเดียวคือ <br><span style="font-size:2em;">จิตใจที่ต้องการจะทําดีต่อสังคมโดยเชื่อว่าถ้าทําดีแล้วจะต้องอยู่รอดได้</span><br>ผมไม่ได้เอาความฉลาดในการหาเงินเป็นเดิมพันเพื่อการอยู่รอด ไม่ได้เอาความเก่งกาจ อํานาจ หรือวุตจากเมืองนอกอะไรมาเป็นเดิมพัน แต่จะเอาความดีที่ผมเคยทํา กําลังทํา และ จะทําเป็นเดิมพันโดยที่ผมเชื่อว่า
+		">สวัสดีครับผมชื่อนาย<br><span style="font-size:2em;">ศุภกร เลาหสงคราม</span><br> ตอนนี้ ไม่มีรายได้ ไม่มีงานประจํา ไม่มีหน้าตาอะไรในสังคม มีอย่างเดียวคือ <br><span style="font-size:2em;">จิตใจที่ต้องการจะทําดีต่อสังคมโดยเชื่อว่าถ้าทําดีแล้วจะต้องอยู่รอดได้</span><br>ผมไม่ได้เอาความฉลาดในการหาเงินเป็นเดิมพันเพื่อการอยู่รอด ไม่ได้เอาความเก่งกาจ อํานาจ หรือวุตจากเมืองนอกมาเป็นเดิมพัน แต่จะเอาความดีที่ผมเคยทํา กําลังทํา และ จะทําเป็นเดิมพันโดยที่ผมเชื่อว่า
 
-<br><span style="font-size:2em;">ถ้าทําดีจริง ยังไงสังคมก็ต้องช่วยและสนันสนุนความดีนั่น</span><br>
+<br><span style="font-size:2em;">ถ้าทําดีจริง ยังไงสังคมก็ต้องช่วยและสนันสนุนความดีนั้น</span><br>
 
-ผมได้ตั่งใจแล้วว่าชีวิตนี้จะใช้ชีวิตอย่างปรตูปชีวี เป็นภาษาบาลีที่มีความหมายว่า <br><span style="font-size:1.5em;">ชีวิตที่มีการเป็นอยู่ที่เนื่องด้วยการให้ของผู้อื่น</span><br>
+ผมได้ตั้งใจแล้วว่าชีวิตนี้จะใช้ชีวิตอย่างปรตูปชีวี เป็นภาษาบาลีที่มีความหมายว่า <br><span style="font-size:1.5em;">ชีวิตที่มีการเป็นอยู่ที่เนื่องด้วยการให้ของผู้อื่น</span><br>
 
-เว็บเพื่อนใจนี้เป็นผลงานแรกที่มอบให้กับทุกท่าน ผมทํางานด้วยใจจริงๆโดยเอาความดีและความเป็นอยู่ของผมเองมาอยู่บนเส้นด้ายแห่งทานและการให้ของทุกท่าน ดั่งนั้นถ้าต้องการช่วยเหลือและสนับสนุนผมไม่ว่าจะเป็นทางใด มากหรือน้อย ทางด้านร่างกายหรือจิตใจ เช่น คําพูดที่ให้กําลังใจหรือการบริจากข้าวปลาอาหาร ผมก็จะซาบซึ้งดีใจขอบคุณและมีกําลังใจมากในการทําความดีให้ทุกท่านต่อไปโดยไม่หวังผลตอบแทน<br>
+เว็บเพื่อนใจนี้เป็นผลงานแรกที่มอบให้กับทุกท่าน ผมทํางานด้วยใจจริงๆโดยเอาความดีและความเป็นอยู่ของผมเองมาอยู่บนเส้นด้ายแห่งทานและการให้ของทุกท่าน ดังนั้นถ้าต้องการช่วยเหลือและสนับสนุนผมไม่ว่าจะเป็นทางใด มากหรือน้อย ทางด้านร่างกายหรือจิตใจ เช่น คําพูดที่ให้กําลังใจหรือการบริจากข้าวปลาอาหาร ผมก็จะซาบซึ้งดีใจขอบคุณและมีกําลังใจมากในการทําความดีให้ทุกท่านต่อไปโดยไม่หวังผลตอบแทน<br>
 
 ผมเชื่อในความดี และอยากให้คนอื่นเช่นกันเชื่อมั่นในความดีของตนและทําในสิ่งนั้นแบบไม่กลัวตาย
 
@@ -48,7 +48,7 @@
 
 ผมไม่รู้ว่าการเดิมพันครั้งนี้จะเป็นอย่างไร เรายังมีความหวังในมนุษยธรรมได้อยู่ไหม ความดีมันกินไม่ได้จริงหรือเปล่า หรือว่าในที่สุดแล้วความดีไม่มีค่าอะไรในสังคมเท่าสิ่งที่จับต้องได้ 
 
-นี้คือการเดินทางเพื่อหาคําตอบโดยการเอาชีวิตเข้าแลก
+นี่คือการเดินทางเพื่อหาคําตอบโดยการเอาชีวิตเข้าแลก
 
 เป็นการก้าวเข้าไปสู่ความมืดที่มีแต่การเดินต่อไปในความมืดนั้นเท่านั้นที่จะพาเราไปถึงจุดหมาย</span>
 
