--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -45,7 +45,7 @@
   <p>;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj</p>
 </div>
 <div class="col-md-10 triangleRight box" style="padding:50px;" ani-scroll="1170">
-  <h1 style="font-size: 6em;">3. ได้เพื่อนใหม่ ได้คําตอบ และได้ทําให้โลกนี้อบอุ่นขึ้น</h1>
+  <h1 style="font-size: 6em;">3. ได้คําตอบ ได้เพื่อนใหม่ และได้ทําให้โลกนี้อบอุ่นขึ้น</h1>
   <p>;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj</p>
 </div>
 </div>
