--- a/client/app/support/support.html
+++ b/client/app/support/support.html
@@ -1,4 +1,39 @@
-<div>
-sadkljf;asf
+<view-title>มาเป็นส่วนร่วมกับเรา -</view-title>
+<div class="container">
 
+	<div class="page-header">
+	  <h1>มาเป็นส่วนร่วมกับเรา <i class="fa fa-child"></i><br><small>ต้องการความช่วยเหลืออย่างมาก!</small></h1>
+	</div>
+	
+	<div id="supportUs">
+
+	<a href="/aboutcreator"><h1>1. เข้าใจสถานการณ์ของผู้สร้าง</h1></a>
+	<ul>
+		<li>ไม่มีรายได้</li>
+		<li>ไม่มีงานประจํา</li>
+		<li>กําลังในการทําจะหมด</li>
+	</ul>
+
+		<h3>เว็บนี้ทําคนเดียวด้วยใจจริงๆ ไม่ได้เงินอะไรจากใคร ดังนั่นถ้าช่วยอะไรผมได้แม้เพียงเล็กน้อยผมก็จะขอบพระคุณเป็นอย่างสูงจริงๆครับ</h3>
+		<hr>
+	<a href="/contact"><h1>2. ถ้าช่วยบริจาคอาหารและปัจจัยจะดีใจมาก</h1></a>
+		<h3>ติดตามชึวิตแปลกๆขอผมได้ที่หนังสือ <span style="font-size: 1.5em;">"ชีวิตนี้ขอทําดีแลกข้าว"</span> ของผู้ทําเว็บนี้<a ng-href="https://www.facebook.com/pages/%E0%B8%8A%E0%B8%B5%E0%B8%A7%E0%B8%B4%E0%B8%95%E0%B8%99%E0%B8%B5%E0%B9%89%E0%B8%82%E0%B8%AD%E0%B8%97%E0%B9%8D%E0%B8%B2%E0%B8%94%E0%B8%B5%E0%B9%81%E0%B8%A5%E0%B8%81%E0%B8%82%E0%B9%89%E0%B8%B2%E0%B8%A7/1585458785057329?ref=hl"> ได้ที่นี้</a></h3>
+	<hr>
+	<a href="/support"><h1>3. รับสมัครผู้ร่วมงาน</h1></a>
+		<ul>
+			<li>เพื่อนร่วมงานที่อยากมาช่วยหรือส่งเสริม project หรือโครงการนี้ในทุกๆด่าน</li>
+			<li>Graphic Designer หรือ Front-End ให้เว็บมีตัวการ์ตูน และ ทําให้ภาพโดยร่วมของเว็บสวยขึ้น</li>
+			<li>Progammer ใจดีมากช่วยพัฒนาโดยมีความรู้ในการใช้ Node.js, Angular.js, MongoDB</li>
+		</ul>
+	<hr>
+	<a href="https://www.facebook.com/supakorn.laohasongkram"><h1>4. ให้กําลังใจผู้สร้าง</h1></a>
+			<h3>พูดตรงๆว่าทุกวันนี้กําลังใจตํ่ามาก 55 ไม่มีข้าวไม่มีเงินไม่เป็นไร แต่เราขอแค่มีกําลังใจก็พอ </h3>
+
+	<hr>
+	<a href="/contact"><h1>5. เข้ามาพูดคุยรู้จักกันและเป็นเพื่อนใจกัน!</h1></a>
+	<ul>
+	<li>เปิดบ้าน 24 ยินดีตอนรับทุกท่านครับ</li>
+	</ul>
+	</div>
+	<hr>
 </div>
