--- a/client/app/support/support.html
+++ b/client/app/support/support.html
@@ -17,7 +17,7 @@
 		<h3>เว็บนี้ทําคนเดียวด้วยใจจริงๆ ไม่ได้เงินอะไรจากใคร ดังนั่นถ้าช่วยอะไรผมได้แม้เพียงเล็กน้อยผมก็จะขอบพระคุณเป็นอย่างสูงจริงๆครับ</h3>
 		<hr>
 	<a href="/contact"><h1>2. ถ้าช่วยบริจาคอาหารและปัจจัยจะดีใจมาก</h1></a>
-		<h3>ติดตามชึวิตแปลกๆขอผมได้ที่หนังสือ <span style="font-size: 1.5em;">"ชีวิตนี้ขอทําดีแลกข้าว"</span> ของผู้ทําเว็บนี้<a ng-href="https://www.facebook.com/pages/%E0%B8%8A%E0%B8%B5%E0%B8%A7%E0%B8%B4%E0%B8%95%E0%B8%99%E0%B8%B5%E0%B9%89%E0%B8%82%E0%B8%AD%E0%B8%97%E0%B9%8D%E0%B8%B2%E0%B8%94%E0%B8%B5%E0%B9%81%E0%B8%A5%E0%B8%81%E0%B8%82%E0%B9%89%E0%B8%B2%E0%B8%A7/1585458785057329?ref=hl"> ได้ที่นี้</a></h3>
+		<h3>ติดตามชึวิตแปลกๆขอผู้สร้างเพื่อนใจได้ที่หนังสือ <span style="font-size: 1.5em;">"ชีวิตนี้ขอทําดีแลกข้าว"</span> ของผู้ทําเว็บนี้<a ng-href="https://www.facebook.com/pages/%E0%B8%8A%E0%B8%B5%E0%B8%A7%E0%B8%B4%E0%B8%95%E0%B8%99%E0%B8%B5%E0%B9%89%E0%B8%82%E0%B8%AD%E0%B8%97%E0%B9%8D%E0%B8%B2%E0%B8%94%E0%B8%B5%E0%B9%81%E0%B8%A5%E0%B8%81%E0%B8%82%E0%B9%89%E0%B8%B2%E0%B8%A7/1585458785057329?ref=hl"> ได้ที่นี้</a></h3>
 	<hr>
 	<a href="/support"><h1>3. รับสมัครผู้ร่วมงาน</h1></a>
 		<ul>
@@ -32,8 +32,8 @@
 	<hr>
 	<a href="/contact"><h1>5. เข้ามาพูดคุยรู้จักกันและเป็นเพื่อนใจกัน!</h1></a>
 	<ul>
-	<li>เปิดบ้าน 24 ยินดีตอนรับทุกท่านครับ</li>
+	<li>เปิดบ้าน 24 ยินดีตอนรับทุกท่าน</li>
 	</ul>
+	<br>
 	</div>
-	<hr>
 </div>
