--- a/client/app/service/service.html
+++ b/client/app/service/service.html
@@ -3,7 +3,7 @@
 	<div class="page-header">
 	  <h1>กิจกรรมเพื่อนใจ</h1>
 	</div>
-	<h3>เป้าหมายของเพื่อนใจนั้นคือการสร้างมิตรไมตรีดั่งนั้นเพื่อเป็นการส่งเสริม ทางเราจึงได้เปิดพื่นที่ผ่านกิจกรรมต่างๆเพื่อให้เพื่อนใจไดมาเจอและดูแลกัน</h3><br>
+	<h3>เป้าหมายของเพื่อนใจคือการสร้างมิตรไมตรี<br>ดั่งนั้นเพื่อเป็นการส่งเสริม เราจึงได้เปิดพื้นที่ผ่านกิจกรรมต่างๆเพื่อให้เพื่อนใจได้มาเจอและดูแลกัน</h3><br>
 	<div class="row">
 
 	<iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=hjb3qjtavjna4pl098nuf6jtr4%40group.calendar.google.com&amp;color=%235F6B02&amp;ctz=Asia%2FBangkok" style=" border-width:0;width:100%; height:610px; margin-bottom: 40px; box-shadow:none; " width="1000" height="600" frameborder="0" scrolling="no"></iframe>
