remake editsetting and added welcome email

--- a/client/app/account/profile/profile.html
+++ b/client/app/account/profile/profile.html
@@ -1,4 +1,7 @@
 <div class="container haveBorder" style="margin-top: 20px; margin-bottom: 20px;">
+  verified: {{currentUser.emailVerification}}
+  email: {{currentUser.email}}
+
 	<div class="row background-blue" style="border-bottom: 1px solid #dddddd;">
 		<div class="col-md-3 bg_blur">
 		</div>
