--- a/client/app/account/settings/settings.html
+++ b/client/app/account/settings/settings.html
@@ -1,51 +1,13 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
-
-<div class="container">
+<div class="container-fluid background-blue">
   <div class="row">
-    <div class="col-sm-12">
-      <h1>Change Password</h1>
+    <div id="settingSection" class="col-sm-2 no-gutter">
+    <ul class="nav nav-pills nav-stacked text-center">
+      <h1>รายการ</h1>
+      <li ng-repeat="section in sections"><a ng-class="{true: 'sectionActive', false: ''}[section.template === template]" ng-click="setSection(section.template);">{{section.name}}</a></li>
+    </ul>
     </div>
-    <div class="col-sm-12">
-      <form class="form" name="form" ng-submit="changePassword(form)" novalidate>
-
-        <div class="form-group">
-          <label>Current Password</label>
-
-          <input type="password" name="password" class="form-control" ng-model="user.oldPassword"
-                 mongoose-error/>
-          <p class="help-block" ng-show="form.password.$error.mongoose">
-              {{ errors.other }}
-          </p>
-        </div>
-
-        <div class="form-group">
-          <label>New Password</label>
-
-          <input type="password" name="newPassword" class="form-control" ng-model="user.newPassword"
-                 ng-minlength="3"
-                 required/>
-          <p class="help-block"
-             ng-show="(form.newPassword.$error.minlength || form.newPassword.$error.required) && (form.newPassword.$dirty || submitted)">
-            Password must be at least 3 characters.
-          </p>
-        </div>
-
-        <div class="form-group">
-          <label>Repeat New Password</label>
-
-          <input type="password" name="newPassword" class="form-control" ng-model="user.newPassword"
-                 ng-minlength="3"
-                 required/>
-          <p class="help-block"
-             ng-show="(form.newPassword.$error.minlength || form.newPassword.$error.required) && (form.newPassword.$dirty || submitted)">
-            Password must be at least 3 characters.
-          </p>
-        </div>
-
-        <p class="help-block"> {{ message }} </p>
-
-        <button class="btn btn-lg btn-primary" type="submit">Save changes</button>
-      </form>
+    <div id="mainEdit" class="col-sm-10 no-gutter background-white">
+    <div ng-include="'app/account/settings/'+template"></div>
     </div>
   </div>
 </div>
