--- a/client/index.html
+++ b/client/index.html
@@ -126,6 +126,8 @@
           <script src="app/account/account.js"></script>
           <script src="app/account/login/login.controller.js"></script>
           <script src="app/account/profile/profile.controller.js"></script>
+          <script src="app/account/settings/changepass/changepassword.controller.js"></script>
+          <script src="app/account/settings/editProfile/editprofile.controller.js"></script>
           <script src="app/account/settings/settings.controller.js"></script>
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
