--- a/client/app/question/question.html
+++ b/client/app/question/question.html
@@ -215,7 +215,7 @@
 		<carousel interval="0" style="display:block; margin:0 auto; width:100%; margin-bottom: 50px; padding: 0 12%;">
 			<slide ng-repeat="questions in questionGroups">
 				<div class="row">
-					<div class="col-md-4" ng-repeat="question in questions" style="z-index: 23;">
+					<div class="col-md-4" ng-repeat="question in questions" style="z-index: 23; border-top: 2px solid aliceblue;">
 						<a ng-href="/questions/{{::question._id}}">
 							
 							<h3>{{::question._source.name}}</h3>
