--- a/client/app/about/aboutcreator.html
+++ b/client/app/about/aboutcreator.html
@@ -10,7 +10,7 @@
 <meta property="og:type" content="website" view-head/>
 <meta property="og:locale" content="th_TH" view-head/>
 <div class="container-fluid animated fadeIn no-gutter">
-<h1 style="  font-size: 150px;
+<h1 id="aboutcreator" style="  font-size: 150px;
   text-align: center;
   background: url('{{backgroundImgUrl}}') fixed;
   -webkit-text-fill-color: transparent;
@@ -28,7 +28,8 @@
   letter-spacing: 20px;
   margin-top:0;
   margin-bottom: 0;
-  color: #FFF577;">
+  color: white;
+  body:not(:-moz-handler-blocked) a { background-color: red; }">
 		<span style="
 		width:75%;
 			display: block;
@@ -53,8 +54,6 @@
 เป็นการก้าวเข้าไปสู่ความมืดที่มีแต่การเดินต่อไปในความมืดนั้นเท่านั้นที่จะพาเราไปถึงจุดหมาย</span>
 
   </h1>
-
-<!--   <a ng-href="https://www.facebook.com/pages/%E0%B8%8A%E0%B8%B5%E0%B8%A7%E0%B8%B4%E0%B8%95%E0%B8%99%E0%B8%B5%E0%B9%89%E0%B8%82%E0%B8%AD%E0%B8%97%E0%B9%8D%E0%B8%B2%E0%B8%94%E0%B8%B5%E0%B9%81%E0%B8%A5%E0%B8%81%E0%B8%82%E0%B9%89%E0%B8%B2%E0%B8%A7/1585458785057329?fref=ts"style="background: linear-gradient(white, #fff9aa); font-size: 2em; width:80%; display:block; margin:15px auto; text-align: center; border:1px solid #dddddd; border-radius: 4px; padding:5px;">- มาเป็นเพื่อนและให้กําลังใจกับชีวิตแปลกๆของผมกันต่อได้ที่นี้นะครับ -</a> -->
 
 
 </div>
